--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="index.html">Home</a></li>
+                  <li><a href="http://signup.actnapa.com>Audition</a><li>
                   <li><a href="http://sides.actnapa.com">Sides</a></li>
-                  <li><a href="http://signup.actnapa.com">Sign Up</a></li>
+                  <li><a href="http://actorform.actnapa.com">Sign Up</a></li>
                 </ul>
               </nav>
             </div>
@@ -56,7 +57,7 @@
             <h1 class="cover-heading">Welcome to Act Napa</h1>
             <p class="lead">The PUC Film Department is creating an Acting Database to find talent for future productions. The Auditions will be held in Fisher Hall Room 203. Each audition will last approximately 15 minutes. All are welcome to audition. Hope to see you there!</p>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Sign Up</a>
+              <a href="#" class="btn btn-lg btn-default">Audition Now</a>
             </p>
           </div>
 
