--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h1 class="cover-heading">Welcome to Act Napa</h1>
             <p class="lead">The PUC Film Department is creating an Acting Database to find talent for future productions. The Auditions will be held in Fisher Hall Room 203. Each audition will last approximately 15 minutes. All are welcome to audition. Hope to see you there!</p>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Audition Now</a>
+              <a href="http://signup.actnapa.com" class="btn btn-lg btn-default">Audition Now</a>
             </p>
           </div>
 
