--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="index.html">Home</a></li>
                   <li><a href="http://signup.actnapa.com">Audition</a><li>
-                  <li><a href="http://sides.actnapa.com">Sides</a></li>
+                  <li><a href="https://drive.google.com/folderview?id=0B5AsO09BBReAMDBQbzR1ellHNHc&usp=sharing">Sides</a></li>
                   <li><a href="http://actorform.actnapa.com">Sign Up</a></li>
                 </ul>
               </nav>
