--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="index.html">Home</a></li>
-                  <li><a href="http://signup.actnapa.com">Audition</a><li>
+                  <li><a href="http://signup.actnapa.com">Audition</a></li>
                   <li><a href="http://sides.actnapa.com">Sides</a></li>
                   <li><a href="http://actorform.actnapa.com">Sign Up</a></li>
                 </ul>
